log/build_2026-02-05_19-52-44/servo_solenoid/stderr.log
  File "/home/ubuntu/turtlebot3_ws/install/servo_solenoid/lib/python3.10/site-packages/servo_solenoid/servoSolenoid.py", line 18
    self.servoSolenoid
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

